--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -13,10 +13,11 @@ $font-size-medium: 1.6rem
 $font-size-large: 1.8rem
 
 // colors
-$color-main: rgb(101,101,101)
+//$color-main: rgb(101,101,101)
+$color-main: rgb(0,133,132)
 $color-light: #eee
 $color-medium: rgb(240,240,240)
-$color-dark: rgb(155,155,155)
+$color-dark: rgb(0,0,0)
 $color-white: #fff
 
 // layout
