styled page heeder

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -47,6 +47,7 @@ button
 
 .header
   background: $color-dark
+  height: 15rem
   padding: $main-mobile-spacing
 
   // https://jonsuh.com/hamburgers/
@@ -65,6 +66,7 @@ button
 
       &:first-child
         margin-top: 0
+
   &__nav-menu
     display: none
 
@@ -78,9 +80,11 @@ button
 
   &__text
     @extend .u-top-border
-    font-size: $font-size-large
-    width: 10rem
     color: $color-white
+    font-size: $font-size-huge
+    font-weight: bold
+    line-height: 2.2rem
+    width: 12rem
 
 
 .call-to-action
