--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -11,6 +11,7 @@ $font-weight-bold: 700
 $font-size-small: 1.2rem
 $font-size-medium: 1.6rem
 $font-size-large: 1.8rem
+$font-size-huge: 2rem
 
 // colors
 //$color-main: rgb(101,101,101)
