included missing font size

--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -8,6 +8,7 @@ $font-weight-normal: 400
 $font-weight-semi-bold: 500
 $font-weight-bold: 700
 
+$font-size-tiny: 1.1rem
 $font-size-small: 1.2rem
 $font-size-medium: 1.6rem
 $font-size-large: 1.8rem
