changed value of color light

--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -17,7 +17,7 @@ $font-size-huge: 2rem
 // colors
 //$color-main: rgb(101,101,101)
 $color-main: rgb(0,133,132)
-$color-light: #eee
+$color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-dark: rgb(0,0,0)
 $color-white: #fff
