styled accordion fonts

--- a/src/sass/components/accordion.sass
+++ b/src/sass/components/accordion.sass
@@ -22,13 +22,14 @@
       border-top: 1px solid $color-light
 
     &-title
+      border-bottom: 1px solid #cccccc
+      font-weight: $font-weight-bold
       padding: $main-mobile-spacing/2 0
-      border-bottom: 1px solid #cccccc;
 
     &-content
       border-left: 2px solid $color-light
+      font-weight: $font-weight-light
       height: 0
-
       overflow: hidden
       padding-left: 1rem
       transition: height $main-transition-duration
