--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -121,16 +121,8 @@ button
 // https://www.quora.com/What-is-the-best-HTML5-visualization-library-that-can-draw-graphs-nodes-and-edges
 // https://www.w3schools.com/graphics/svg_line.asp
 // https://stackoverflow.com/questions/21864989/draw-lines-between-2-elements-in-html-page
-.linked-nodes
-  padding: $main-mobile-spacing
 
-  &__title
-    @extend .u-top-border
-    font-size: $font-size-medium
-    margin-bottom: $main-mobile-spacing
-
-  &__subtitle
-    font-size: $font-size-small
+@import 'components/linked-nodes'
 
 .page-container--nav-menu-open
 
