--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -9,20 +9,13 @@
     display: table
 
   &__image
-    //background-color: $color-dark
     @extend .u-wireframe-image
-    background: url()
     float: right
-    //height: 80%
     margin-left: $main-mobile-spacing
-  //position: absolute
-  //right: $main-mobile-spacing
-  //top: $main-mobile-spacing
-  //width: 40%
 
   &__title
     @extend .u-top-border
-    clear: left;
+    clear: left
     float: left
     font-weight: $font-weight-bold
     margin-bottom: $main-mobile-spacing/2
@@ -37,7 +30,6 @@
   &__quote
     font-size: $font-size-tiny
     font-weight: $font-weight-bold
-    //padding-left: $main-mobile-spacing
     position: relative
 
     &:before
@@ -46,7 +38,3 @@
       display: block
       font-size: 3.6rem
       line-height: 1rem
-
-//left: 0
-  //position: absolute
-  //top: 0
