moved top border up by -.2rem

--- a/src/sass/utilities/_top-border.sass
+++ b/src/sass/utilities/_top-border.sass
@@ -4,7 +4,7 @@
 
   &:before
     border-top: .3rem solid $color-dark
-    top: 0
+    top: -.2rem
     content: ''
     height: .2rem
     position: absolute
