--- a/src/sass/components/linked-nodes.sass
+++ b/src/sass/components/linked-nodes.sass
@@ -1,12 +1,11 @@
 .linked-nodes
-  padding: $main-mobile-spacing
+  margin: $main-mobile-spacing
 
   &__title
     @extend .u-top-border
     font-size: $font-size-medium
     font-weight: $font-weight-bold
     margin-bottom: $main-mobile-spacing/2
-    padding-top: .8rem
 
   &__subtitle
     font-size: $font-size-small
@@ -54,8 +53,6 @@
     &:first-child:after
       display: none
 
-
-
-
   &__list-element-main-text
     font-weight: bold
+    padding-top: .8rem
