added text-block component

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -136,6 +136,7 @@ button
 
 @import 'components/accordion'
 @import 'components/text-and-image'
+@import 'components/text-block'
 
 .banner-image
   @extend .u-wireframe-image
