added quote component

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -137,6 +137,7 @@ button
 @import 'components/accordion'
 @import 'components/text-and-image'
 @import 'components/text-block'
+@import 'components/quote'
 
 .banner-image
   @extend .u-wireframe-image
