--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -13,6 +13,9 @@
 *:focus
   outline: none
 
+*
+  box-sizing: border-box
+
 html
   font-size: 62.5%
   color: $color-dark
@@ -47,7 +50,6 @@ button
 
 .header
   background: $color-dark
-  height: 15rem
   padding: $main-mobile-spacing
 
   // https://jonsuh.com/hamburgers/
