added search component

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -134,12 +134,11 @@ button
     &:first-child
       margin-top: 0
 
-
-
 @import 'components/accordion'
 @import 'components/text-and-image'
 @import 'components/text-block'
 @import 'components/quote'
+@import 'components/search'
 
 .banner-image
   @extend .u-wireframe-image
