fixed single/double quote issue

--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -38,3 +38,8 @@
       display: block
       font-size: 3.6rem
       line-height: 1rem
+
+    &:after
+      content: close-quote
+      visibility: hidden
+
