added contact component

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -139,6 +139,8 @@ button
 @import 'components/text-block'
 @import 'components/quote'
 @import 'components/search'
+@import 'components/contact'
+
 
 .banner-image
   @extend .u-wireframe-image
