--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -16,6 +16,10 @@
 *
   box-sizing: border-box
 
+a
+  color: $color-dark
+  text-decoration: none
+
 html
   font-size: 62.5%
   color: $color-dark
