made close menu button smaller

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -82,18 +82,21 @@ button
     border: .2rem solid $color-white
     border-radius: 2rem
     display: block
-    height: 4rem
+    height: 3rem
     position: absolute
     right: 2rem
     top: 2rem
-    width: 4rem
+    width: 3rem
 
     &:before
       color: $color-white
       content: "\2715"
       font-size: 2rem
-      line-height: 3.4rem
+      left: -.15rem
+      line-height: 2.4rem
+      position: relative
       text-align: center
+      top: -.05rem
 
   &__nav-menu-list
     margin-top: 8rem
