renamed linked-nodes to ordered-list; ordered-list is now data driven

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -160,7 +160,7 @@ button
 // https://www.w3schools.com/graphics/svg_line.asp
 // https://stackoverflow.com/questions/21864989/draw-lines-between-2-elements-in-html-page
 
-@import 'components/linked-nodes'
+@import 'components/ordered-list'
 
 .page-container--nav-menu-open
 
