--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -18,6 +18,7 @@
 
 a
   color: $color-dark
+  cursor: pointer
   text-decoration: none
 
 html
@@ -33,6 +34,7 @@ body
 button
   border: none
   background: none
+  cursor: pointer
 
 // -- COMPONENTS ------------------------------------------
 
