added transition effect to search buttons

--- a/src/sass/components/search.sass
+++ b/src/sass/components/search.sass
@@ -71,6 +71,7 @@
       background-color: $color-main
       border-color: $color-main
       color: $color-white
+      transition: all .2s
 
   &__job-post
     border-bottom: .1rem solid $color-light
