--- a/src/sass/components/search.sass
+++ b/src/sass/components/search.sass
@@ -73,6 +73,8 @@
       color: $color-white
       transition: all .2s
 
+  &__view-container
+    margin: $main-mobile-spacing/2 0
   &__job-post
     border-bottom: .1rem solid $color-light
     font-size: $font-size-small
