added border to map; centred map content;

--- a/src/sass/components/search.sass
+++ b/src/sass/components/search.sass
@@ -75,6 +75,13 @@
 
   &__view-container
     margin: $main-mobile-spacing/2 0
+
+  &__map
+    display: flex
+    justify-content: center
+    & > iframe
+      border: .1rem solid $color-light
+
   &__job-post
     border-bottom: .1rem solid $color-light
     font-size: $font-size-small
