added dummy job post data; styled job posts

--- a/src/sass/components/search.sass
+++ b/src/sass/components/search.sass
@@ -85,26 +85,23 @@
   &__job-post
     border-bottom: .1rem solid $color-light
     font-size: $font-size-small
-    height: 5rem
-    margin: $main-mobile-spacing/2 0
+    line-height: 1.2
+    padding: $main-mobile-spacing/2 0
     position: relative
 
     &-distance
       font-weight: $font-weight-bold
-      left: 0
-      position: absolute
-      top: 0
+
+    &-position
+      font-weight: $font-weight-bold
 
     &-salary
       font-weight: $font-weight-bold
       position: absolute
       right: 0
-      top: 0
+      top: $main-mobile-spacing/2
 
     &-prison
-      bottom: $main-mobile-spacing/2
-      position: absolute
-      left: 0
 
     &-link
       bottom: $main-mobile-spacing/2
