--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -98,6 +98,9 @@ button
     &:first-child
       border-top: 1px solid $color-white
 
+    &-subtext
+      font-weight: $font-weight-normal
+
   &__logo
     @extend .u-wireframe-image
     height: 3rem
