--- a/src/sass/components/accordion.sass
+++ b/src/sass/components/accordion.sass
@@ -10,7 +10,7 @@
 
   &__subtitle
     font-weight: $font-weight-bold
-    margin-bottom: 1rem
+    margin-bottom: $main-mobile-spacing
 
   &__list-element
     position: relative
