styled strong tag globally

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -36,6 +36,9 @@ button
   background: none
   cursor: pointer
 
+strong
+  font-weight: $font-weight-bold
+
 // -- COMPONENTS ------------------------------------------
 
 .page-container
