--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -13,6 +13,7 @@ $font-size-small: 1.2rem
 $font-size-medium: 1.6rem
 $font-size-large: 1.8rem
 $font-size-huge: 2rem
+$font-size-enormous: 4.8rem
 
 // colors
 //$color-main: rgb(101,101,101)
