changed accordion and text-image block margins

--- a/src/sass/components/accordion.sass
+++ b/src/sass/components/accordion.sass
@@ -1,6 +1,6 @@
 .accordion
   font-size: $font-size-small
-  padding: $main-mobile-spacing/2 $main-mobile-spacing
+  margin: $main-mobile-spacing
 
   &__title
     @extend .u-top-border
