--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -1,6 +1,6 @@
 .text-and-image
   border-bottom: 2px solid $color-dark
-  margin: $main-mobile-spacing/2 $main-mobile-spacing
+  margin: $main-mobile-spacing $main-mobile-spacing
   position: relative
 
   &::after
