created VideoPlayer component

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -147,11 +147,12 @@ strong
       margin-top: 0
 
 @import 'components/accordion'
-@import 'components/text-and-image'
-@import 'components/text-block'
+@import 'components/contact'
 @import 'components/quote'
 @import 'components/search'
-@import 'components/contact'
+@import 'components/text-and-image'
+@import 'components/text-block'
+@import 'components/video-player'
 
 .banner-image
   @extend .u-wireframe-image
