created Tabs component for role page

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -169,6 +169,7 @@ strong
 @import 'components/quote'
 @import 'components/role-intro'
 @import 'components/search'
+@import 'components/tabs'
 @import 'components/text-and-image'
 @import 'components/text-block'
 @import 'components/video-player'
