created .common-header utility

--- a/src/sass/components/ordered-list.sass
+++ b/src/sass/components/ordered-list.sass
@@ -2,10 +2,7 @@
   margin: $main-mobile-spacing
 
   &__title
-    @extend .u-top-border
-    font-size: $font-size-medium
-    font-weight: $font-weight-bold
-    margin-bottom: $main-mobile-spacing/2
+    @extend .common-header
 
   &__subtitle
     font-size: $font-size-small
