--- a/src/sass/components/role-intro.sass
+++ b/src/sass/components/role-intro.sass
@@ -15,9 +15,7 @@
     display: block
 
   &__main-title
-    @extend .u-top-border
-    font-weight: $font-weight-bold
-    margin-bottom: $main-mobile-spacing/2
+    @extend .common-header
 
   &__subtitle
     font-size: $font-size-small
