--- a/src/sass/components/search.sass
+++ b/src/sass/components/search.sass
@@ -2,8 +2,7 @@
   margin: $main-mobile-spacing
 
   &__title
-    @extend .u-top-border
-    font-weight: $font-weight-bold
+    @extend .common-header
 
   &__form
     position: relative
