--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -16,11 +16,9 @@
     margin-left: $main-mobile-spacing
 
   &__title
-    @extend .u-top-border
+    @extend .common-header
     clear: left
     float: left
-    font-weight: $font-weight-bold
-    margin-bottom: $main-mobile-spacing/2
     width: 11rem
 
   &__text
