--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,6 +6,7 @@
 @import 'variables'
 
 // utilities
+@import 'utilities/_common-header.sass'
 @import 'utilities/_top-border.sass'
 @import 'utilities/_wire-frame.sass'
 
