--- a/src/sass/components/contact.sass
+++ b/src/sass/components/contact.sass
@@ -2,9 +2,7 @@
   margin: $main-mobile-spacing
 
   &__title
-    @extend .u-top-border
-    font-size: $font-size-medium
-    font-weight: $font-weight-bold
+    @extend .common-header
 
   &__list
     &-element
