--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -7,8 +7,11 @@
 
 // utilities
 @import 'utilities/_common-header.sass'
+@import 'utilities/_common-table.sass'
+@import 'utilities/_margin.sass'
 @import 'utilities/_top-border.sass'
 @import 'utilities/_wire-frame.sass'
+
 
 // base reset
 *:focus
