--- a/src/sass/utilities/_common-header.sass
+++ b/src/sass/utilities/_common-header.sass
@@ -3,3 +3,9 @@
   font-size: $font-size-medium
   font-weight: $font-weight-bold
   margin-bottom: $main-mobile-spacing/2
+
+.common-header-small
+  @extend .u-top-border-small
+  font-size: $font-size-small
+  font-weight: $font-weight-bold
+  margin: $main-mobile-spacing/2 0
