--- a/src/sass/utilities/_top-border.sass
+++ b/src/sass/utilities/_top-border.sass
@@ -10,3 +10,16 @@
     position: absolute
     width: 4rem
     left: 0
+
+.u-top-border-small
+  padding-top: .5rem
+  position: relative
+
+  &:before
+    border-top: .2rem solid $color-dark
+    top: -.2rem
+    content: ''
+    height: .2rem
+    position: absolute
+    width: 3rem
+    left: 0
