disabled contact links for now

--- a/src/sass/components/contact.sass
+++ b/src/sass/components/contact.sass
@@ -15,3 +15,6 @@
         font-weight: bold
         padding: $main-mobile-spacing/2
         text-align: center
+        // TODO - remove:
+        pointer-events: none
+        cursor: default
