--- a/src/sass/components/video-player.sass
+++ b/src/sass/components/video-player.sass
@@ -10,17 +10,18 @@
     &:before
       $diameter: 3rem
       align-items: center
-      border: .1rem solid $color-light
+      border: .2rem solid $color-white
       border-radius: 2rem
-      color: $color-light
+      color: $color-white
       content: '>'
       cursor: pointer
       display: flex
+      font-weight: $font-weight-bold
       justify-content: center
       height: $diameter
       width: $diameter
 
     &:hover:before
-      border-color: $color-white
-      color: $color-white
+      border-color: $color-main
+      color: $color-main
       transition: all .2s
