hiding html until vue has rendered

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -30,6 +30,7 @@ html
   color: $color-dark
   background-color: $color-white
   font-family: $sans-serif
+  opacity: 0
 
 body
   font-size: $font-size-medium
