--- a/src/sass/components/text-and-image.sass
+++ b/src/sass/components/text-and-image.sass
@@ -14,6 +14,12 @@
     @extend .u-wireframe-image
     float: right
     margin-left: $main-mobile-spacing
+    object-fit: cover
+    width: 15rem
+
+    @include bp('portrait')
+      width: 50rem
+      height: 25rem
 
   &__title
     @extend .common-header
