created clearfix utility

--- a/src/sass/components/role-intro.sass
+++ b/src/sass/components/role-intro.sass
@@ -3,12 +3,8 @@
   position: relative
 
   &__main-section
+    @extend .u-clearfix
     border-bottom: .2rem solid $color-dark
-
-    &::after
-      content: ""
-      clear: both
-      display: table
 
   &__image
     @extend .u-wireframe-image
