--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -4,14 +4,6 @@
 @import '../css/reset.css'
 
 @import 'variables'
-
-// utilities
-@import 'utilities/_common-header.sass'
-@import 'utilities/_common-table.sass'
-@import 'utilities/_margin.sass'
-@import 'utilities/_top-border.sass'
-@import 'utilities/_wire-frame.sass'
-
 @import 'breakpoints'
 @import 'layout'
 
@@ -45,6 +37,14 @@ button
 
 strong
   font-weight: $font-weight-bold
+
+// utilities
+@import 'utilities/_common-header.sass'
+@import 'utilities/_common-table.sass'
+@import 'utilities/_clearfix.sass'
+@import 'utilities/_margin.sass'
+@import 'utilities/_top-border.sass'
+@import 'utilities/_wire-frame.sass'
 
 // -- COMPONENTS ------------------------------------------
 
