all images now displayed as blocks

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -38,6 +38,9 @@ button
 strong
   font-weight: $font-weight-bold
 
+img
+  display: block
+
 // utilities
 @import 'utilities/_common-header.sass'
 @import 'utilities/_common-table.sass'
