disabling greyed out non active call to action buttons

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -90,7 +90,7 @@ img
       padding: $main-mobile-spacing/2 $main-mobile-spacing
 
       &[href='']
-        color: $color-light
+        //color: $color-light
         pointer-events: none // TODO remove
 
 @import 'components/accordion'
