--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -21,7 +21,9 @@ $color-main: rgb(0,133,132)
 $color-light: rgb(204,204,204)
 $color-medium: rgb(240,240,240)
 $color-dark: rgb(0,0,0)
+$color-dark-transparent: rgba(0,0,0,0.85)
 $color-white: #fff
+$color-transparent: rgba(0,0,0,0)
 
 // layout
 $main-mobile-spacing: 2rem
