create Job Summary component

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -19,6 +19,9 @@ a
   cursor: pointer
   text-decoration: none
 
+p a
+  text-decoration: underline
+
 html
   font-size: 62.5%
   color: $color-dark
@@ -96,6 +99,7 @@ img
 @import 'components/accordion'
 @import 'components/contact'
 @import 'components/header'
+@import 'components/job-summary'
 @import 'components/ordered-list'
 @import 'components/quote'
 @import 'components/role-intro'
