--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -57,46 +57,8 @@ img
 .page-container
   width: 100%
 
-.call-to-action
-  background: $color-main
-  margin-bottom: $main-mobile-spacing
-  padding: $main-mobile-spacing
-
-  @include bp('portrait')
-    margin: auto
-    width: 80%
-
-  &__list
-    @include bp('portrait')
-      text-align: center
-
-  &__list-element
-    background: $color-main
-    border: 1px solid $color-white
-    color: $color-white
-    font-size: $font-size-large
-    margin-top: 1rem
-    text-align: center
-
-    @include bp('portrait')
-      display: inline-block
-      margin-top: 0
-      width: 30%
-
-    &:first-child
-      margin-top: 0
-
-    & > a
-      color: $color-white
-      cursor: pointer
-      display: block
-      padding: $main-mobile-spacing/2 $main-mobile-spacing
-
-      &[href='']
-        //color: $color-light
-        pointer-events: none // TODO remove
-
 @import 'components/accordion'
+@import 'components/call-to-action'
 @import 'components/contact'
 @import 'components/header'
 @import 'components/job-summary'
