--- a/src/sass/components/call-to-action.sass
+++ b/src/sass/components/call-to-action.sass
@@ -38,7 +38,20 @@
         pointer-events: none // TODO remove
 
   &--tight
+    background-color: $color-white
+
     .call-to-action
+
       &__list-element
+        $size: .2rem
         background-color: $color-white
+        border: $size solid $color-dark
         margin-top: 0
+        position: relative
+        top: -$size
+
+        &:first-child
+          top: 0
+
+        & > a
+          color: $color-dark
