--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -1,3 +1,6 @@
+@mixin background-img($path)
+   background-image: url('/img/#{$path}')
+
 // fonts
 $sans-serif:  "Source Sans Pro", Helvetica, Verdana, sans-serif
 $serif: Merriweather, Georgia, 'Times New Roman', serif
